<resources>
    <string name="app_name">HealthLink</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <!--TODO ENTER YOUR APP ID BELOW-->
    <string name="facebook_app_id"/>
    <!--TODO ENTER YOUR APP ID BELOW (eg: fb0123456789)-->
    <string name="fb_login_protocol_scheme">fb</string>
    <!--TODO ENTER YOUR Client Token BELOW-->
    <string name="facebook_client_token"/>
    <string name="msg_mot_de_passe_ou">Mot de passe oubliée ?</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_nom">Nom</string>
    <string name="address">Address</string>
    <string name="no_address_found">No address found</string>
    <string name="working_hours">Working hours</string>
    <string name="mon_fri_09_00_21_00">Mon - Fri 09:00 : 21:00</string>
    <string name="book_an_appointment">Book an appointment</string>
    <string name="please_fill_the_form_below">Please fill the form below</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="note_you_must_enter_the_correct_information_entering_wrong_information_might_lead_to_cancellation_of_your_future_appointments">Note: You must enter the correct information. Entering wrong information might lead to cancellation of your future appointments.</string>

    <string name="lbl_Prenom">Prénom</string>
    <string name="lbl_privacypolicy">PrivacyPolicy.</string>
    <string name="lbl_cardiologue">Cardiologue</string>
    <string name="lbl_se_connecter2">se connecter</string>
    <string name="lbl_questions">Questions</string>
    <string name="msg_by_logging_you2">By logging, you agree to our</string>
    <string name="lbl_or_sign_in_with">Ou bien s\u2019inscrire avec : </string>
    <string name="lbl_healthlink">HealthLink</string>
    <string name="lbl_s_inscrire">S\u2019inscrire</string>
    <string name="msg_otp_verificatio">OTP Verification</string>
    <string name="lbl_s_inscrire2">s\u2019inscrire</string>
    <string name="lbl_sp_cialit_s">Spécialités</string>
    <string name="lbl_neurologue">Neurologue</string>
    <string name="msg_vous_avez_d_ja">Vous avez déja utilisé HealthLink ?
Connectez-vous en un seul clic .</string>
    <string name="lbl_health">Health</string>
    <string name="msg_verifiez_le_cod">Verifiez le code recu sur votre Numero de téléphone :</string>
    <string name="lbl_se">Se </string>
    <string name="lbl_v_rifier">Vérifier</string>
    <string name="msg_nouveau_sur_hea">Nouveau sur HealthLink ?
Inscrivez-vous en un seul clic et profitez de votre platforme .</string>
    <string name="msg_r_servez_et_pla">Réservez et planifiez avec le médecin le plus proche</string>
    <string name="lbl_see_all">See All</string>
    <string name="lbl_se_connecter">Se connecter</string>
    <string name="lbl_medicaments">Medicaments</string>
    <string name="lbl_pharmacies">Pharmacies</string>
    <string name="lbl_generaliste">Generaliste</string>
    <string name="lbl_password">Password</string>
    <string name="msg_by_logging_you">By logging, you agree to our  Terms &amp; Conditions and PrivacyPolicy.</string>
    <string name="lbl_p_diatre">Pédiatre</string>
    <string name="lbl_connecter">connecter</string>
    <string name="lbl_pneumologue">Pneumologue</string>
    <string name="lbl_and">and</string>
    <string name="lbl_m_decins">Médecins</string>
    <string name="lbl">_____</string>
    <string name="lbl_dentiste">Dentiste</string>
    <string name="lbl_link">Link</string>
    <string name="msg_terms_conditi">Terms &amp; Conditions</string>
    <string name="lbl_consulter">Consulter</string>
    <string name="lbl_remember_me">Remember me</string>
    <string name="lbl_your_number">Numéro de telephone</string>
    <string name="msg_please_enter_valid_pa">Please enter valid password</string>
    <string name="msg_please_enter_valid_email">Please enter valid email</string>
    <string name="forget_password">Veuillez saisir votre numéro de téléphone : </string>
    <string name="txtForget">Récupérer votre compte</string>
    <string name="txtSuivant">Suivant</string>
    <string name="txtManageandsche">Suivez les étapes et décourez la meilleur expérience E-Health avec nos médecins </string>
    <string name="msg_best_doctor_app">Réjoignez nos médecins </string>
    <string name="txtDoctor">Vous étes un médecin ? </string>
    <string name="txtProfile">Profile </string>
    <string name="txtRdv">Mes Consultations </string>
    <string name="txtDossie">Dossier Médical </string>
    <string name="txtInfos">Mes informations Personnelles </string>
    <string name="home">Home </string>
    <string name="profile">Profile </string>
    <string name="txtchanger">Enregistrer </string>
    <string name="ordannances">Mes Ordonnances </string>
    <string name="txt">Mes Ordonnances </string>
    <string name="txtDoctors">Médecins</string>


</resources>