<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.SignInFragment"
    android:id="@+id/signin">

    <FrameLayout

        style="@style/groupStylegray_300_1"
        android:layout_width="match_parent"
        android:layout_height="677dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">
        <LinearLayout android:id="@+id/linearColumngroup"
            android:layout_gravity="top|center"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_16pxv"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent" android:orientation="vertical">


            <TextView android:gravity="start"
                android:id="@+id/txtDescription"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_14pxh"
                android:layout_marginStart="@dimen/_14pxh"
                android:layout_marginTop="@dimen/_26pxv"
                android:layout_width="match_parent"
                android:text="@string/msg_vous_avez_d_ja"
                style="@style/txtInterregular12_1" />
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_border_gray_200_radius_16"
                android:ellipsize="end" android:hint="@string/lbl_your_number"
                android:id="@+id/NumTel"
                android:inputType="phone"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_3pxh"
                android:layout_marginTop="@dimen/_33pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_18pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_19pxv"
                android:singleLine="true"

                android:textColorHint="@color/gray_400"
                style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_border_gray_200_radius_16"
                android:ellipsize="end"
                android:hint="@string/lbl_password"
                android:id="@+id/Password"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_3pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_18pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_19pxv"
                android:singleLine="true"

                android:textColorHint="@color/gray_400"
                style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
            <LinearLayout android:id="@+id/linearRememberpasswo"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_3pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="match_parent" android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkBoxRememberme"
                    android:layout_width="73dp"

                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_9pxh"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_marginBottom="@dimen/_9pxv"
                    android:layout_weight="0.46"
                    android:buttonTint="@color/bluegray_200"
                    android:ellipsize="end"
                    android:paddingStart="@dimen/_9pxh"
                    android:paddingTop="@dimen/_1pxv"
                    android:paddingBottom="@dimen/_1pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_remember_me"
                    android:textColor="@color/gray_901"
                    android:textFontWeight="400"
                    android:textSize="@dimen/_12pxh"
                    android:textStyle="normal"
                    tools:text="@string/lbl_remember_me" />
                <Button
                    android:id="@+id/btnForget"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_9pxv"
                    android:layout_marginStart="9dp"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_weight="0.54"

                    android:layout_width="50dp" android:singleLine="true"
                    android:text="@string/msg_mot_de_passe_ou"
                    style="@style/Widget.Material3.Button.TextButton"
                    />
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                style="@style/btnSolidRounded_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_7pxh"
                android:layout_marginTop="@dimen/_24pxv"
                android:ellipsize="end"
                android:gravity="center"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_16pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingBottom="@dimen/_16pxv"
                android:singleLine="true"
                android:text="@string/lbl_se_connecter2"
                android:textAllCaps="false"
               />
            <Button
                android:id="@+id/btnDoctor"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3pxh"
                android:layout_marginTop="@dimen/_40pxv"
                android:layout_width="match_parent"



                android:singleLine="true"
                android:text="@string/txtDoctor"
                style="@style/Widget.Material3.Button.TextButton"
                />
            <LinearLayout android:id="@+id/linearRowrectangleelevenOne"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3pxh"
                android:layout_marginTop="@dimen/_26pxv"
                android:layout_width="match_parent" android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtOrsigninwith"
                    style="@style/txtInterregular12_1"
                    android:layout_width="114dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_4pxh"
                    android:layout_weight="0.26"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/lbl_or_sign_in_with" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLoginalternati"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_14pxh"
                android:layout_marginTop="@dimen/_32pxv"
                android:layout_marginEnd="@dimen/_14pxh"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnGoogle"
                    android:layout_width="@dimen/_46pxh"
                    android:layout_height="@dimen/_46pxh"
                    android:background="@drawable/rectangle_bg_gray_100_radius_23"
                    android:paddingHorizontal="@dimen/_11pxh"
                    android:paddingVertical="@dimen/_11pxv"
                    android:scaleType="fitCenter"
                    android:src="@drawable/img_google"
                    tools:ignore="ContentDescription" />

                <ImageButton
                    android:id="@+id/btnFacebook"
                    android:layout_width="@dimen/_46pxh"
                    android:layout_height="@dimen/_46pxh"
                    android:layout_marginStart="@dimen/_32pxh"
                    android:background="@drawable/rectangle_bg_gray_100_radius_23"
                    android:paddingHorizontal="@dimen/_11pxh"
                    android:paddingVertical="@dimen/_11pxv"
                    android:scaleType="fitCenter"
                    android:src="@drawable/img_facebook"
                    tools:ignore="ContentDescription" />

            </LinearLayout>


        </LinearLayout>
    </FrameLayout>
</layout>
