<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout

        style="@style/groupStylegray_300_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"




            app:layout_constraintTop_toTopOf="parent"/>
        <LinearLayout android:id="@+id/linearColumngroup"
            android:layout_gravity="top|center"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_16pxv"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent" android:orientation="vertical">

            <TextView android:ellipsize="end"
                android:id="@+id/txtForget"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_23pxh"
                android:layout_marginStart="@dimen/_23pxh"
                android:layout_marginTop="@dimen/_54pxv"
                android:layout_width="match_parent"

                style="@style/txtInterbold32" android:text="@string/txtForget"/>
            <TextView android:gravity="start"
                android:id="@+id/txtforgetPassword"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_14pxh"
                android:layout_marginStart="@dimen/_14pxh"
                android:layout_marginTop="@dimen/_26pxv"
                android:layout_width="match_parent"
                android:text="@string/msg_vous_avez_d_ja"
                style="@style/txtInterregular12_1" />
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_border_gray_200_radius_16"
                android:ellipsize="end" android:hint="@string/lbl_your_number"
                android:id="@+id/etForm"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_3pxh"
                android:layout_marginTop="@dimen/_33pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_18pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_19pxv"
                android:singleLine="true"

                android:textColorHint="@color/gray_400"
                style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>


            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtButton"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3pxh"
                android:layout_marginTop="@dimen/_40pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_15pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_16pxv"
                android:singleLine="true"
                android:text="@string/txtSuivant"
                style="@style/txtSolidRounded" />
            <LinearLayout android:id="@+id/linearRowrectangleelevenOne"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3pxh"
                android:layout_marginTop="@dimen/_26pxv"
                android:layout_width="match_parent" android:orientation="horizontal">


            </LinearLayout>




        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>