<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.ConnexionActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"




        app:layout_constraintTop_toTopOf="parent"/>
    <FrameLayout
        android:id="@+id/frameSignUp"
        style="@style/groupStylegray_300_1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150pxh"
        app:layout_constraintTop_toTopOf="parent">



        <LinearLayout
            android:id="@+id/linearColumngroup"
            android:layout_width="411dp"
            android:layout_height="131dp"
            android:layout_gravity="top|center"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginBottom="@dimen/_14pxv"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/toolbarToolbar"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginStart="@dimen/_69pxh"
                android:layout_marginEnd="@dimen/_69pxh"
                android:gravity="start"
                android:src="@drawable/logoo" />

            <LinearLayout
                android:id="@+id/linearRowsinscrire"
                android:layout_width="@dimen/_410pxh"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_27pxv"
                android:layout_marginEnd="@dimen/_21pxh"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/txtSinscrire"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="300dp"

                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.4"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/lbl_s_inscrire"
                    android:textColor="@color/gray_600"
                    tools:text="@string/lbl_s_inscrire2" />


                <Button
                    android:id="@+id/txtSeConnecter"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="300dp"

                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.4"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/lbl_se_connecter2"
                    android:textColor="@color/gray_600" />


            </LinearLayout>


        </LinearLayout>


    </FrameLayout>


    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="410dp"
        android:layout_height="666dp"
        app:layout_constraintTop_toBottomOf="@id/frameSignUp"></FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>